--- a/vignettes/EscapeChars.Rmd
+++ b/vignettes/EscapeChars.Rmd
@@ -24,7 +24,7 @@ library(microbenchmark)
 
 ## Escaping characters in R
 
-Here are three functions that escape strings in R.
+Here are four functions that escape strings in R.
 
 ```{r}
 # Version 1
@@ -49,10 +49,13 @@ escape2 <- function(x) {
 
 # Version 3 - implemented in C, in rspeed package
 escape3 <- escape_chars_
+
+# Version 4 - implemented in C++ with Rcpp, in rspeed package
+escape4 <- escape_chars_cpp
 ```
 
 
-Here are the results, and some sanity checks that all three versions have the same output:
+Some sanity checks that all three versions have the same output:
 
 ```{r}
 # Check that all three have the same output, and return the output
@@ -60,8 +63,9 @@ escape_test <- function(vec) {
   res1 <- escape1(vec)
   res2 <- escape2(vec)
   res3 <- escape3(vec)
+  res4 <- escape4(vec)
 
-  if (!identical(res1, res2) || !identical(res2, res3)) {
+  if (!identical(res1, res2) || !identical(res2, res3)|| !identical(res3, res4)) {
     stop("Results are not all identical.")
   }
   res1
@@ -85,20 +89,22 @@ mychars <- c(letters, " ", '"', "\\", "\t", "\n", "\r", "'", "/", "#", "$");
 createstring <- function(length){
   paste(mychars[ceiling(runif(length, 0, length(mychars)))], collapse="")
 }
-strings <- vapply(rep(1000, 1000), createstring, character(1), USE.NAMES=FALSE)
+strings <- vapply(rep(1000, 10000), createstring, character(1), USE.NAMES=FALSE)
 
 # Test performance
 system.time(out1 <- escape1(strings))
 system.time(out2 <- escape2(strings))
 system.time(out3 <- escape3(strings))
+system.time(out4 <- escape4(strings))
 
 # Verify that output is identical
-identical(out1, out2)
-identical(out2, out3)
+stopifnot(identical(out1, out2))
+stopifnot(identical(out2, out3))
+stopifnot(identical(out3, out4))
 
 # Verify that escape was correct
 orig1 <- vapply(out1, function(x){parse(text=x)[[1]]}, character(1), USE.NAMES=FALSE)
-identical(strings, orig1)
+stopifnot(identical(strings, orig1))
 ```
 
 
